Small corrections in code
Added container class so that content wont streach too much

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,6 @@
 @layer base {
   body {
     @apply m-0;
+    caret-color: transparent;
   }
 }
